--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
     <link rel="icon" type="image/png" href="img/techis-logo.png" />
-    <title>New Portfolio</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
@@ -59,16 +59,16 @@
     <div id="about">
         <div class="details">
             <div class="name">
-                <h1>Hi, my name is <b>Aiyappa</b></h1>
+                <h1>Hi, my name is <b>Dorcus nagadya</b></h1>
             </div>
             </br>
             <div class="detail">
                 <h1> An innovative Web Developer with a marketing background specializing in Github & Webflow.</h1>
             </div>
             <div class="icons">
-                <a href="https://github.com/Aiyappa-M/NewPortfolio" target="_blank" class="btn btn-secondary">Github</a
+                <a href="https://github.com/dorcus123/" target="_blank" class="btn btn-secondary">Github</a
 >
-            <a href="https://www.linkedin.com/in/aiyappa-m-694070245/" target="_blank" class="btn btn-secondary">Linkedin</a
+            <a href="https://www.linkedin.com/in/dorcus-nagadya" target="_blank" class="btn btn-secondary">Linkedin</a
 >
 
 
@@ -143,7 +143,7 @@
                             <div class="icons">
                                 <a href="https://portfolio-aiyappa.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a
 >
-                                <a href="https://github.com/Aiyappa-M/NewPortfolio" target="_blank" class="btn btn-secondary">Github Link</a
+                                <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
 >
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <div class="icons">
                                 <a href="https://portfolio-aiyappa.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a
 >
-                                <a href="https://github.com/Aiyappa-M/NewPortfolio" target="_blank" class="btn btn-secondary">Github Link</a
+                                <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
 >
                             </div>
                         </div>
@@ -193,53 +193,18 @@
                 </div>
             </div>
 
-            <div class="card mb-3">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Hive Wear Tech-Online clothing shopping website</h5>
-                            <p class="card-text-description">
-                                Project Description: A convenient and fun way to browse featured clothing & accessories from some of the best clothing brands online, especially aimed at teenagers. With this web app, you can browse products by any color you like or by trending colors,
-                                save products into favorites, and share products with friends on social media.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            </p>
-                            <p>
-                                <span style="font-weight: bold">Skills Used:</span> Frontend: React & Redux || Backend: Django API
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">
-                  Test Login Account <br />
-                  Email: test@gmail.com <br />
-                  Password: 1234</small
->
-                            </p>
-                            <div class="icons">
-                                <a href="https://portfolio-aiyappa.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a
->
-                                <a href="https://github.com/Aiyappa-M/NewPortfolio" target="_blank" class="btn btn-secondary">Github Link</a
->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <video class="project-video" autoplay controls muted>
-              <source src="img/Twitter_video.mov" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-                    </div>
-                </div>
-            </div>
         </div>
         </div>
 
         <div id="contact" style="text-align: center;">
             <h2>Hope you found my portfolio interesting!</h2>
-            <div class="email">You can reach at: aiyappa@techis.io</div>
+            <div class="email">You can reach at: dorcusnagadya64@gmail.com</div>
             </br>
             <hr>
             <div class="icons" style="margin-bottom: 100px;">
-                <a href="https://github.com/Aiyappa-M/NewPortfolio" target="_blank">
+                <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank">
                     <img style="width: 30px; height: 30px" src="img/github.png" /></a>
-                <a href="https://www.linkedin.com/in/aiyappa-m-694070245/" target="_blank"><img style="width: 30px; height: 30px; margin-left: 20px" src="img/linkedin-logo.png" /></a>
+                <a href="https://www.linkedin.com/in/dorcus-nagadya" target="_blank"><img style="width: 30px; height: 30px; margin-left: 20px" src="img/linkedin-logo.png" /></a>
 
             </div>
 
