--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 >
                             </p>
                             <div class="icons">
-                                <a href="https://portfolio-aiyappa.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a
+                                <a href="https://dorcus-portfolio.dorcusnagadya.repl.co" target="_blank" class="btn btn-secondary">Website Link</a
 >
                                 <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
 >
@@ -177,7 +177,7 @@
 >
                             </p>
                             <div class="icons">
-                                <a href="https://portfolio-aiyappa.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a
+                                <a href="https://dorcus-portfolio.dorcusnagadya.repl.co" target="_blank" class="btn btn-secondary">Website Link</a
 >
                                 <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
 >
