--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
     <link rel="icon" type="image/png" href="img/techis-logo.png" />
     <title>Portfolio</title>
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container">
-            <a class="navbar-brand title-icon"><b> <span class="font-primary">P</span>ortfolio</b></a
+            <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a
         >
         <button
           class="navbar-toggler"
@@ -28,196 +28,91 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav ms-auto mb-2">
             <li class="nav -item">
-              <a class="nav-link font-black" href="#about" style="color: black"
-                >About</a
-              >
+              <a class="nav-link font-black" href="#about">About</a>
             </li>
-            <li class="nav-item">
-              <a
-                class="nav-link font-black"
-                href="#projects"
-                style="color: black"
-                >Projects</a
-              >
+            <li class="nav -item">
+                <a class="nav-link font-black" href="#project">Projects</a>
             </li>
-            <li class="nav-item">
-              <a
-                class="nav-link font-black"
-                href="#contact"
-                style="color: black"
-                >Contact</a
-              >
-            </li>
-          </ul>
+            </ul>
         </div>
-      </div>
+        </div>
     </nav>
 
-    <div style="padding: 5%;">
-
-    
     <div id="about">
-        <div class="details">
-            <div class="name">
-                <h1>Hi, my name is <b>Dorcus nagadya</b></h1>
-            </div>
-            </br>
-            <div class="detail">
-                <h1> An innovative Web Developer with a marketing background specializing in Github & Webflow.</h1>
-            </div>
-            <div class="icons">
-                <a href="https://github.com/dorcus123/" target="_blank" class="btn btn-secondary">Github</a
->
-            <a href="https://www.linkedin.com/in/dorcus-nagadya" target="_blank" class="btn btn-secondary">Linkedin</a
->
-
-
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src="img/profile.jpeg" style="width: 100px; height:100px;"/>
+        <div class="name">Dorcus Nagadya</div>
+        <div class="vocation">Web Application Developer</div>
+        <div class="skills">
+            HTML/ CSS/ JavaScript/ Redux/ Python/ Django/
+            <br /> Express.JS / AWS(Basic) / Docker(Basic)
         </div>
+        <p>As a Web Developer for 2 Months</p>
+        <div class="email">dorcusnagadya64@gmail.com</div>
+        <div class="icons">
+          <a href="https://github.com/dorcus123/" target="_blank" class="btn btn-secondary">Github</a
+            >
+                        <a href="https://www.linkedin.com/in/dorcus-nagadya" target="_blank" class="btn btn-secondary">Linkedin</a
+            >
+            
         </div>
-        <img src="img/profile.jpeg" alt="" />
-        </div>
+    </div>
 
-
-        <h2>What I do</h2>
-        <div id="my_portfolio">
-            <div class="what_do">
-                <h4>Web Development</h4>
-                <p>
-                    Need help with Developing and Desgning things Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                    ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                </p>
-            </div>
-            <div class="what_do">
-                <h4> GitHub</h4>
-                <p>
-                    Need help with Developing and Desgning things Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                    ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                </p>
-            </div>
-            <div class="what_do">
-                <h4>Webflow and Setup</h4>
-                <p>
-                    Need help with Developing and Desgning things Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                    ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                </p>
-            </div>
-        </div>
-
-        <h2>My Skills and Tools</h2>
-        <div class="skills" style="margin-top: 50px;">
-            <img src="img/html-5.png" alt="" width="100px" height="100px">
-            <img src="img/css.png" alt="" width="100px" height="100px">
-            <img src="img/js.png" alt="" width="100px" height="100px">
-            <img src="img/physics.png" alt="" width="100px" height="100px">
-            <img src="img/icons8-redux-48.png" alt="" width="100px" height="100px">
-            <img src="img/icons8-django-50.png" alt="" width="100px" height="100px">
-            <img src="img/express-js-seeklogo.com.svg" alt="" width="100px" height="100px">
-            <img src="img/icons8-amazon-web-services-48.png" alt="" width="100px" height="100px">
-            <img src="img/docker.png" alt="" width="100px" height="100px">
-        </div>
-
-
-
-        <h2 style="margin-top: 50px; ">My Projects</h2>
-
-        <div id="projects">
-            <div class="card mb-3">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Twitter Clone</h5>
-                            <p class="card-text-description">
-                                Project Description: A convenient and fun way to browse featured clothing & accessories from some of the best clothing brands online, especially aimed at teenagers. With this web app, you can browse products by any color you like or by trending colors,
-                                save products into favorites, and share products with friends on social media.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            </p>
-                            <p>
-                                <span style="font-weight: bold">Skills Used:</span> Frontend: React & Redux || Backend: Django API
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">
-                  Test Login Account <br />
-                  Email: test@gmail.com <br />
-                  Password: 1234</small
->
-                            </p>
-                            <div class="icons">
-                                <a href="https://dorcus-portfolio.dorcusnagadya.repl.co" target="_blank" class="btn btn-secondary">Website Link</a
->
-                                <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <video class="project-video" autoplay controls muted>
-              <source  src="img/Twitter_video.mov" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-                    </div>
+    <div id="project">
+        <h2><span class="font-primary">P</span>roject</h2>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/project-twitter.png" alt="Twitter Project" />
                 </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Twitter Clone</h5>
+                        <p class="card-text">This is a twitter based project</p>
+                        <p class="card-text">
+                            <small class="text-muted">Test Login Account<br />
+                  Email: Test@Gmail.com<br />
+                  Pass: 123456
+                </small>
+                        </p>
+                        <a href="https://dorcus-portfolio.dorcusnagadya.repl.co" target="_blank" class="btn btn-secondary">Website Link</a
+                          >
+                                                          <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
+                          >
             </div>
+          </div>
+        </div>
+      </div>
 
-            <div class="card mb-3">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Netflix Clone</h5>
-                            <p class="card-text-description">
-                                Project Description: A convenient and fun way to browse featured clothing & accessories from some of the best clothing brands online, especially aimed at teenagers. With this web app, you can browse products by any color you like or by trending colors,
-                                save products into favorites, and share products with friends on social media.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            </p>
-                            <p>
-                                <span style="font-weight: bold">Skills Used:</span> Frontend: React & Redux || Backend: Django API
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">
-                  Test Login Account <br />
-                  Email: test@gmail.com <br />
-                  Password: 1234</small
->
-                            </p>
-                            <div class="icons">
-                                <a href="https://dorcus-portfolio.dorcusnagadya.repl.co" target="_blank" class="btn btn-secondary">Website Link</a
->
-                                <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <video class="project-video" autoplay controls muted>
-              <source src="img/Portfolio_video.mov" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-                    </div>
-                </div>
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img/project-netflix.png" alt="Netflix Project" />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Netflix Project</h5>
+              <p class="card-text">This is a netflix based project</p>
+              <p class="card-text">
+                <small class="text-muted"
+                  >Test Login Account<br />
+                  Email: Test@Gmail.com<br />
+                  Pass: 123456
+                </small>
+              </p>
+              <a href="https://dorcus-portfolio.dorcusnagadya.repl.co" target="_blank" class="btn btn-secondary">Website Link</a
+                >
+                                                <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank" class="btn btn-secondary">Github Link</a
+                >
             </div>
-
+          </div>
         </div>
-        </div>
-
-        <div id="contact" style="text-align: center;">
-            <h2>Hope you found my portfolio interesting!</h2>
-            <div class="email">You can reach at: dorcusnagadya64@gmail.com</div>
-            </br>
-            <hr>
-            <div class="icons" style="margin-bottom: 100px;">
-                <a href="https://github.com/dorcus123/dorcus-portfolio" target="_blank">
-                    <img style="width: 30px; height: 30px" src="img/github.png" /></a>
-                <a href="https://www.linkedin.com/in/dorcus-nagadya" target="_blank"><img style="width: 30px; height: 30px; margin-left: 20px" src="img/linkedin-logo.png" /></a>
-
-            </div>
-
-
-        </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-
-
-
-</body>
-
-
-
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
